[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/compliment/light.png" type="Texture" id=1]
[ext_resource path="res://theme/theme.theme" type="Theme" id=2]
[ext_resource path="res://script/settings.gd" type="Script" id=3]
[ext_resource path="res://art/ui/ui.png" type="Texture" id=5]

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
show_joystick = NodePath("container/container/vbox/scroll/vbox/show_joystick/check_button")
god_mode = NodePath("container/container/vbox/scroll/vbox/god_mode/check_button")

[node name="container" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -232.0
margin_right = 300.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="NinePatchRect" parent="container"]
margin_right = 600.0
margin_bottom = 464.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="MarginContainer" parent="container"]
margin_right = 600.0
margin_bottom = 464.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="container/container"]
margin_left = 32.0
margin_top = 32.0
margin_right = 568.0
margin_bottom = 432.0

[node name="title" type="Label" parent="container/container/vbox"]
margin_right = 536.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
text = "Settings"
align = 1

[node name="scroll" type="ScrollContainer" parent="container/container/vbox"]
margin_top = 68.0
margin_right = 536.0
margin_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vbox" type="VBoxContainer" parent="container/container/vbox/scroll"]
margin_right = 536.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="show_joystick" type="HBoxContainer" parent="container/container/vbox/scroll/vbox"]
margin_right = 536.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="container/container/vbox/scroll/vbox/show_joystick"]
margin_top = 13.0
margin_right = 424.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Show joysticks"

[node name="check_button" type="CheckButton" parent="container/container/vbox/scroll/vbox/show_joystick"]
margin_left = 428.0
margin_right = 536.0
margin_bottom = 52.0
size_flags_horizontal = 0
flat = true

[node name="god_mode" type="HBoxContainer" parent="container/container/vbox/scroll/vbox"]
margin_top = 56.0
margin_right = 536.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="container/container/vbox/scroll/vbox/god_mode"]
margin_top = 13.0
margin_right = 424.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "God mode"

[node name="check_button" type="CheckButton" parent="container/container/vbox/scroll/vbox/god_mode"]
margin_left = 428.0
margin_right = 536.0
margin_bottom = 52.0
size_flags_horizontal = 0
flat = true

[node name="test" type="LineEdit" parent="container/container/vbox"]
margin_top = 241.0
margin_right = 536.0
margin_bottom = 292.0

[node name="hbox" type="HBoxContainer" parent="container/container/vbox"]
margin_top = 296.0
margin_right = 536.0
margin_bottom = 346.0

[node name="discord" type="Button" parent="container/container/vbox/hbox"]
margin_right = 72.0
margin_bottom = 50.0
rect_min_size = Vector2( 72, 0 )
shortcut_in_tooltip = false

[node name="sprite" type="Sprite" parent="container/container/vbox/hbox/discord"]
visible = false
position = Vector2( 36, 26 )
scale = Vector2( 0.40625, 0.40625 )
texture = ExtResource( 5 )
hframes = 5
vframes = 5
frame = 4

[node name="about" type="Button" parent="container/container/vbox/hbox"]
margin_left = 76.0
margin_right = 304.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "About"

[node name="button" type="Button" parent="container/container/vbox/hbox"]
margin_left = 308.0
margin_right = 536.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Support us"

[node name="reset" type="Button" parent="container/container/vbox"]
margin_top = 350.0
margin_right = 536.0
margin_bottom = 400.0
text = "Reset game"

[connection signal="pressed" from="container/container/vbox/hbox/discord" to="." method="_on_discord_pressed"]
